--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
     "clsx": "^2.1.1",
+    "leva": "^0.10.0",
     "modern-normalize": "^3.0.1",
     "re-resizable": "^6.11.2",
     "react": "^19.1.0",
@@ -29,6 +30,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "prettier": "^3.5.3",
+    "prettier-plugin-glsl": "^0.2.1",
     "sass": "^1.89.2",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
