--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
+    "@react-spring/web": "^10.0.1",
     "clsx": "^2.1.1",
     "leva": "^0.10.0",
     "modern-normalize": "^3.0.1",
