--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
+    "test": "vitest",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -14,15 +15,19 @@
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
     "@react-spring/web": "^10.0.1",
+    "@react-three/drei": "^9.113.2",
+    "@react-three/fiber": "^9.0.0",
     "clsx": "^2.1.1",
     "leva": "^0.10.0",
     "modern-normalize": "^3.0.1",
     "re-resizable": "^6.11.2",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "three": "^0.164.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@testing-library/react": "^16.2.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react-swc": "^3.9.0",
@@ -36,6 +41,7 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^2.1.8"
   }
 }
